# ccc_upgrade

./: README.md
ccc_upgrade/: .autotools  .cproject  .project  CMakeLists.txt
ccc_upgrade/doc/: tcpserver.c  tcpserver.h
ccc_upgrade/include/: thread_wrapper.h
ccc_upgrade/include/network/: network_manager.h  udp_server.h
ccc_upgrade/include/protocol/: protocol_core.h  protocol_define.h
ccc_upgrade/include/protocol_adapter/: protocol_adapter.h
ccc_upgrade/src/: CMakeLists.txt
ccc_upgrade/src/configure/: CMakeLists.txt  configure.c  configure.h
ccc_upgrade/src/file_manager/: CMakeLists.txt  file_manager.c  file_manager.h  md5sum.c  md5sum.h  upload_file.c  upload_file.h
ccc_upgrade/src/main/: CMakeLists.txt  ccc_config.h  ccc_upgrade.c  ccc_upgrade.h  main.c  version.h
ccc_upgrade/src/network/: CMakeLists.txt  client_manager.c  client_manager.h  network_manager.c  network_manager.h  network_share.h  tcp_socket.c  tcp_socket.h  udp_server.c  udp_server.h  udp_socket.c  udp_socket.h
ccc_upgrade/src/packet_pool/: CMakeLists.txt  ccc_packet.c  ccc_packet.h  packet_pool.c  packet_pool.h
ccc_upgrade/src/protocol/: CMakeLists.txt  protocol.h  protocol_core.c
ccc_upgrade/src/protocol_adapter/: CMakeLists.txt  protocol_adapter.c  protocol_adapter.h
ccc_upgrade/src/utils/: CMakeLists.txt  thread_wrapper.c  util_func.c  util_func.h  util_log.c  util_log.h
